--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=DeleverySystem
+    spring.application.name=FoodlyYummy
 
-    spring.datasource.url= jdbc:mysql://localhost:3306/deliver_system
+    spring.datasource.url= jdbc:mysql://localhost:3306/food_order
     spring.datasource.username=root
     spring.datasource.password=trongpm
 
@@ -9,3 +9,4 @@ spring.application.name=DeleverySystem
     spring.jpa.show-sql=false
     spring.jpa.properties.hibernate.format_sql=true
     spring.main.banner-mode= off
+
